# TangoTree

./: .clang-format  .gitignore  CMakeLists.txt  Input  LICENSE.txt  Makefile  README.md  RandomTestGenerator.py  RedBlackTree  RedBlackTree.cpp  RedBlackTree.h  TangoTree  TangoTree.cpp  TangoTree.h  TreeGenerator.py
includes/: RedBlackTree.h  TangoTree.h
main/: CMakeLists.txt  MainRBT.cpp  MainTT.cpp
scripts/: Makefile  RandomTestGenerator.py
src/: CMakeLists.txt  RedBlackTree.cpp  RedBlackTree.h  TangoTree.cpp  TangoTree.h
tests/: CMakeLists.txt  RedBlackTreeTest.cpp
tests/unit/: RedBlackTreeTest.cpp  TangoTreeTest.cpp
